fix navigation bar bug on firefox

--- a/layout-single-column.styl
+++ b/layout-single-column.styl
@@ -226,6 +226,7 @@
             }
             .columns-area__panels__pane--navigational {
                 order: 1;
+                z-index: 99;
             }
         }
         .logo--wordmark {
@@ -1527,5 +1528,5 @@
         }
     }
     .link-footer p:first-child::after {
-        content: " · Pebble theme for Mastodon v1.3.2.1 by @blobcat@pebble.social";
+        content: " · Pebble theme for Mastodon v1.3.2.2 by @blobcat@pebble.social";
     }
